--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,30 @@
+html {
+  background-color: black;
+  text-align: center;
+  font-family: Verdana;
+}
 .links {
   color: aquamarine;
+  font-size: 16px;
 }
 
 h1 {
   font-size:50px;
   color:white;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 42px;
+  color:white;
+}
+
+p {
+  font-size: 21px;
+  color: gray;
+}
+
+#footer {
+  text-align: right;
+  color: gray;
 }
